Many new files in this push delayed because of issue with my ssh key

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,13 @@
-$background-color: #282c34;
+
+$text-color: #4A4A4A;
+
+$blue1: #4DCEEC;
+$blue2: #115DA3;
+$blue3: #65AED5;
+$blue4: #42749a;
+
+$grey1: #D8D8D8;
+
+$white: #ffffff;
+
+$background-color: $blue2;
