--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,16 @@
+@import "scss/fonts";
 @import "scss/variables";
+@import "scss/weather-items";
+@import "scss/buttons";
+@import "scss/layout";
+@import "scss/forms";
+@import "scss/icons";
 
 .App {
+  background: $background-color;
+  background-image: linear-gradient(-46deg, $blue1 0%, $blue2 100%);
+  padding: 20px;
+  position: relative;
   text-align: center;
 }
 
@@ -10,14 +20,24 @@
 }
 
 .App-header {
-  background-color: $background-color;
-  min-height: 100vh;
+  align-items: center;
+  background: $white;
+  border-radius: 3px;
+  box-shadow: 0 0 40px 0px $blue4;
+  position: relative;
+  font-family: 'Lucida Grande';
+  margin: 170px auto 40px;
+  max-width: 670px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  transition: all 0.3s ease;
+  filter: blur(0px);
+}
+
+.show-location-form .App-header {
+  filter: blur(2px);
 }
 
 .App-link {
