--- a/src/scss/_icons.scss
+++ b/src/scss/_icons.scss
@@ -1,3 +1,105 @@
+@keyframes Clouds-roll-by {
+  0% {
+    transform: translateX(-70px);
+  }
+  30% {
+    transform: translateX(-800px);
+  }
+  70% {
+    transform: translateX(1000px);
+  }
+
+  100% {
+    transform: translateX(-0px);
+  }
+}
+
+@keyframes Clouds-roll-by2 {
+  0% {
+    transform: translateX(120px);
+  }
+  30% {
+    transform: translateX(1000px);
+  }
+  70% {
+    transform: translateX(-500px);
+  }
+
+  100% {
+    transform: translateX(-0px);
+  }
+}
+
+@keyframes Clouds-roll-by3 {
+  0% {
+    transform: translateX(30px) scaleX(-1);
+  }
+  30% {
+    transform: translateX(1000px) scaleX(-1);
+  }
+  70% {
+    transform: translateX(-800px) scaleX(-1);
+  }
+
+  100% {
+    transform: translateX(-0px) scaleX(-1);
+  }
+}
+
+@keyframes Clouds-roll-by4 {
+  0% {
+    transform: translateX(80px) scaleX(-1);
+  }
+  30% {
+    transform: translateX(-1000px) scaleX(-1);
+  }
+  70% {
+    transform: translateX(500px) scaleX(-1);
+  }
+
+  100% {
+    transform: translateX(-0px) scaleX(-1);
+  }
+}
+
 .icon-wrapper {
   display: inline-block;
+}
+
+.cloud1,
+.cloud2,
+.cloud3,
+.cloud4 {
+  position: absolute;
+  z-index: 30;
+}
+
+.cloud1 {
+  right: -50px;
+  width: 208px;
+  top: 70px;
+  animation: Clouds-roll-by infinite 170s linear;
+}
+
+.cloud2 {
+  left: -80px;
+  width: 146px;
+  top: 146px;
+  animation: Clouds-roll-by2 infinite 200s linear;
+}
+
+.cloud3 {
+  left: 800px;
+  width: 120px;
+  top: 180px;
+  opacity: .85;
+  animation: Clouds-roll-by3 infinite 240s linear;
+}
+
+.cloud4 {
+  right: 800px;
+  width: 130px;
+  top: 85px;
+  opacity: .8;
+  animation: Clouds-roll-by4 infinite 140s linear;
 }
