--- a/src/scss/_forms.scss
+++ b/src/scss/_forms.scss
@@ -9,7 +9,7 @@
   padding: 20px;
   //transform: scale(1);
   transition: all 0.3s ease;
-  transform: translateY(-100%);
+  transform: translateY(-200px);
   transform-origin: top;
   opacity: 0;
   margin: 10px;
