--- a/src/scss/_weather-items.scss
+++ b/src/scss/_weather-items.scss
@@ -20,25 +20,44 @@
   display: block;
 }
 
-.day-stats,
-.today-stats {
+.day-stats {
   svg {
     fill: $blue3;
   }
 }
 
+.today-stats {
+  svg {
+    fill: $white;
+    stroke: #11528c;
+  }
+}
+
 .img-wrapper {
+  //More changes
   width: 100%;
   overflow: hidden;
   position: relative;
   padding-bottom: 40px;
   z-index: 20;
+  min-height: 300px;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
 
+  &:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: $blue2;
+    opacity: 1;
+  }
+
   img {
     box-shadow: 0 0 30px 0px #bbbbbb;
-    display: block;
+    display: none;
   }
 }
 
@@ -78,11 +97,24 @@
 
 .today-weather {
   position: absolute;
-  top: 0;
+  top: 100px;
   left: 0;
-  color: $blue3;
+  right: 0;
+  color: $white;
   z-index: 30;
   padding-top: 20px;
+  text-shadow: 0 0 20px #0c3c67;
+
+  .icon-wrapper {
+    display: block;
+    margin-top: 30px;
+  }
+
+  .tempC,
+  .tempF {
+    left: 0;
+    text-align: center;
+  }
 }
 
 .today-temp {
@@ -99,7 +131,7 @@
     height: 10px;
     width: 10px;
     border-radius: 50%;
-    border: 2px solid $blue3;
+    border: 2px solid $white;
     right: -8px;
     top: 50%;
     margin-top: -13px;
@@ -108,7 +140,7 @@
 
 .today-weather-misc {
   display: inline-block;
-  text-align: left;
+  text-align: center;
   font-size: 14px;
   line-height: 1.3;
 }
@@ -123,13 +155,9 @@
 }
 
 .forecast-week-wrapper {
-  margin-top: -40px;
   margin-bottom: 0;
   position: relative;
   z-index: 0;
-  display: flex;
-  flex-direction: row;
-  height: 160px;
   align-items: stretch;
   width: 100%;
   position: relative;
@@ -169,13 +197,16 @@
 
 .forecast-day-info {
   background: $white;
-  border-right: 1px solid $grey1;
+  border-bottom: 1px solid $grey1;
   flex-grow: 1;
   transition: all 0.3s ease;
 }
 
 .day-stats-day {
   margin-bottom: 20px;
+  float: left;
+  font-weight: bold;
+  text-transform: uppercase;
 }
 
 .forecast-temp-wrapper {
@@ -193,6 +224,7 @@
   .tempF {
     position: relative;
     top: inherit;
+    display: block;
 
     &:after {
       content: "";
@@ -219,9 +251,17 @@
   font-family: 'Lucida Grande';
   font-size: 14px;
   color: $text-color;
+  min-height: 60px;
 
   span,
   .icon-wrapper {
-    display: block;
+    display: inline-block;
+  }
+
+  .icon-wrapper,
+  .forecast-temp-wrapper{
+    float: right;
+    text-align: right;
+    margin-left: 10px;
   }
 }
